make cz adaptor works

--- a/modules/drivers/clickzetta/resources/metabase-plugin.yaml
+++ b/modules/drivers/clickzetta/resources/metabase-plugin.yaml
@@ -38,7 +38,7 @@ driver:
       display-name: Schema
       type: string
       required: true
-      placeholder: "myschema"
+      placeholder: "public"
       description: "The schema name of your Clickzetta database."
 init:
   - step: load-namespace
